added new api route /count to get number of matching transactions, depending on the query params + some refactoring and changing of the structure
